--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -10,7 +10,7 @@ on:
 
 defaults:
   run:
-    working-directory: 'pmikus.FIXME'
+    working-directory: 'pmikus.lychee'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -27,7 +27,7 @@ jobs:
       - name: Check out the codebase.
         uses: actions/checkout@v2
         with:
-          path: 'pmikus.FIXME'
+          path: 'pmikus.lychee'
       - name: Set up Python 3.
         uses: actions/setup-python@v2
         with:
@@ -48,7 +48,7 @@ jobs:
       - name: Check out the codebase.
         uses: actions/checkout@v2
         with:
-          path: 'pmikus.FIXME'
+          path: 'pmikus.lychee'
       - name: Set up Python 3.
         uses: actions/setup-python@v2
         with:
@@ -66,7 +66,7 @@ jobs:
       - name: Check out the codebase.
         uses: actions/checkout@v1
         with:
-          path: 'pmikus.FIXME'
+          path: 'pmikus.lychee'
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
