--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,12 +1,13 @@
 ---
 # file: meta/main.yaml
 
-dependencies: []
+dependencies:
+  - geerlingguy.docker
 
 galaxy_info:
-  role_name: FIXME
+  role_name: lychee
   author: pmikus
-  description: FIXME for Linux.
+  description: Lychee Docker for Linux.
   company: none
   license: "license (BSD, MIT)"
   min_ansible_version: 2.9
@@ -17,4 +18,6 @@ galaxy_info:
         - focal
         - groovy
   galaxy_tags:
-    - FIXME
+    - lychee
+    - photo
+    - management
