--- a/tasks/main.yaml
+++ b/tasks/main.yaml
@@ -1,13 +1,83 @@
 ---
 # file: tasks/main.yaml
 
-- include_tasks: "{{ ansible_distribution|lower }}.yaml"
+- name: Run Lychee Docker Compose
+  docker_compose:
+    project_name: lychee
+    definition:
+      version: "3"
+      services:
+        lychee_db:
+          container_name: lychee_db
+          image: "{{ lychee_db_image }}"
+          environment: "{{ lychee_db_environment }}"
+          expose: "{{ lychee_db_expose }}"
+          volumes: "{{ lychee_db_volumes }}"
+          networks:
+            - lychee
+          restart: "unless-stopped"
+        lychee:
+          container_name: lychee
+          image: "{{ lychee_image }}"
+          ports:
+            - 90:80
+          volumes:
+            - ./lychee/conf:/conf
+            - ./lychee/uploads:/uploads
+            - ./lychee/sym:/sym
+          networks:
+            - lychee
+          environment:
+            #- PUID=1000
+            #- PGID=1000
+            - PHP_TZ=UTC
+            #- APP_NAME=Laravel
+            #- APP_ENV=local
+            #- APP_DEBUG=true
+            #- APP_URL=http://localhost
+            #- LOG_CHANNEL=stack
+            - DB_CONNECTION=mysql
+            - DB_HOST=lychee_db
+            - DB_PORT=3306
+            - DB_DATABASE=lychee
+            - DB_USERNAME=lychee
+            - DB_PASSWORD=lychee
+            #- DB_DROP_CLEAR_TABLES_ON_ROLLBACK=false
+            #- DB_OLD_LYCHEE_PREFIX=''
+            #- BROADCAST_DRIVER=log
+            #- CACHE_DRIVER=file
+            #- SESSION_DRIVER=file
+            #- SESSION_LIFETIME=120
+            #- QUEUE_DRIVER=sync
+            #- SECURITY_HEADER_HSTS_ENABLE=false
+            #- REDIS_HOST=127.0.0.1
+            #- REDIS_PASSWORD=null
+            #- REDIS_PORT=6379
+            #- MAIL_DRIVER=smtp
+            #- MAIL_HOST=smtp.mailtrap.io
+            #- MAIL_PORT=2525
+            #- MAIL_USERNAME=null
+            #- MAIL_PASSWORD=null
+            #- MAIL_ENCRYPTION=null
+            #- PUSHER_APP_ID=''
+            #- PUSHER_APP_KEY=''
+            #- PUSHER_APP_SECRET=''
+            #- PUSHER_APP_CLUSTER=mt1
+            - STARTUP_DELAY=30
+          restart: unless-stopped
+          depends_on:
+            - lychee_db
+      networks:
+        lychee:
+      volumes:
+        mysql:
+  register: output
   tags:
-    - FIXME-inst-dependencies
+    - lychee-run-compose
 
-- name: Install FIXME.
-  package:
-    name: "{{ FIXME_package }}"
-    state: "{{ FIXME_package_state }}"
-  tags:
-    - FIXME-inst
+  debug:
+    var: output
+
+  assert:
+    that:
+      - "lychee.lychee.state.running"
